--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,29 @@
-/*  your css code here. If applicable */
+
 /*  your css code here. If applicable */
 .progress-bar {
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; 
 	margin-bottom: 20px;
 }
+
 .circle {
 	border-radius: 50%;
 	width: 30px;
 	height: 30px;
-	border: 2px solid #c2c6c9;
+	border: 2px solid #e0e0e0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 16px;
-	color: black;
-	background: #fff;
+	color: #999;
+	background-color: #fff;
+}
+.active{
+	border-color: #3498db;
 }
 
-.active {
-	border-color: #1e86d0;
-	color: black;
-}
-
-.line {
+.line{
 	height: 2px;
 	flex: 1;
 	background: #c2c6c9;
@@ -34,17 +33,31 @@
 	background: #1e86d0;
 }
 
-button {
+.btn-container{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+button{
 	padding: 8px 30px;
-	margin: 0 5px;
+	margin: 5px;
 	cursor: pointer;
-	background-color: #1e86d0;
+	background-color: #3498db;
 	border-radius: 6px;
-	color: white;
+	border: 0;
+	color: #fff; 
 }
 
-button:disabled {
+button: disabled{
 	cursor: not-allowed;
-	opacity: 0.7;
-
+	background-color: #e0e0e0;
 }
+
+
+
+
+
+
+
+
